file(GLOB APP_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
foreach(APP_SRC ${APP_SRCS})
  if(NOT APP_SRC STREQUAL "utils.c")
    string(REPLACE ".c" "" APP_NAME ${APP_SRC})
    add_executable(${APP_NAME} ${APP_SRC} utils.c)
    target_link_libraries(${APP_NAME} ingenialink)
  endif()
endforeach()
